<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scott.dev.app.SecondHandCarInfoActivity">

    <Button
        android:id="@+id/carInfotBack2Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="carInfoBackToHome"
        android:text="@string/secondCarInfoBackToHome_btn_text"></Button>

    <Button
        android:id="@+id/carInfo2Dealer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carInfotBack2Home"
        android:onClick="carInfo2Dealer"
        android:text="@string/secondCarInfoBackToDealer_btn_text" />

    <Button
        android:id="@+id/carInfo2Bargain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carInfo2Dealer"
        android:onClick="carInfo2Bargain"
        android:text="@string/secondCarInfoBackToBargainer_btn_text" />

    <EditText
        android:id="@+id/edtCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/carInfo2Bargain"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/second_car_info_title" />

</RelativeLayout>