<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scott.dev.app.BuySecondCarDealerActivity">

    <Button
        android:id="@+id/bargainerBackToCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bargainerBackToCarInfo"
        android:text="@string/secondCarBargainBackToCarInfo_btn_text"></Button>

    <Button
        android:id="@+id/bargainerToBargainSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bargainerBackToCarInfo"
        android:onClick="bargainerToBargainSuccess"
        android:text="@string/secondCarBargainerToBargainSuccess_btn_text" />

    <Button
        android:id="@+id/bargainerBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bargainerToBargainSuccess"
        android:onClick="bargainerBackToHome"
        android:text="@string/secondCarBargainBackToHome_btn_text" />

</RelativeLayout>