<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scott.dev.app.BuySecondCarDealSuccessActivity">

    <Button
        android:id="@+id/dealSuccBackToCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dealSuccBackToDealer"
        android:onClick="dealSuccessBackToCarInfo"
        android:text="@string/secondCarDealSuccBack2CarInfo_btn_text" />

    <Button
        android:id="@+id/dealSuccBackToDealer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dealSuccessBackToDealer"
        android:text="@string/secondCarDealSuccBack2Dealer_btn_text"></Button>

    <Button
        android:id="@+id/dealSuccBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dealSuccBackToCarInfo"
        android:layout_below="@+id/dealSuccBackToCarInfo"
        android:layout_marginTop="35dp"
        android:onClick="dealSuccessBackToHome"
        android:text="@string/secondCarDealSuccBack2Home_btn_text" />
    <!--
        <Button
            android:id="@+id/dealSuccBackToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dealSuccBackToHome"
            android:onClick="dealSuccessBackToHome"
            android:text="@string/secondCarDealSuccBack2Home_btn_text" />
        -->

</RelativeLayout>